@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST bios.bin-1.7.1.gz 69911 SHA256 faf2385918ca5b7866b23a30a566334a2d9b70f9c0bf2904ff7b8940db4ce4d4 SHA512 eed48b6c985d6f96e419a830e9679ca739bf13f0f3f7099d4fb5c5176fbd5dd5f5d0e3998ec2132eb0a4221b55c7a71624f2845ef040c092b88f1b2c16864de6 WHIRLPOOL 47bebbebe100d35e1427ac10df09fc8df1297dd3b6015cbcd802029dc2a3854503b6551397f38ee83a079a728cce8ab788ebb5b5dc4ed68a8c079704d96c896e
 DIST bios.bin-1.7.2.1.gz 71961 SHA256 b76824976a43a4379dbdd676b153e762b4e9f0097441a31d70e18c9acc1cae06 SHA512 1e66fec890842b48d11bcb81b63a0b04e3ffca2e1285c356430944819407eb08dc85c50cddab1459a8f94ec1d4492f15207f98ee30263417c47bfd31b8f2a7f1 WHIRLPOOL fc278ccb3763342ab2fc5e1e8fdf05650cc87f23f7620e148ee93918913c2e217b8246e33c1940bf812bbf262180722acbc1ad415c681f3e15409f92b637e510
@@ -20,23 +20,13 @@ EBUILD seabios-1.7.1.ebuild 1949 SHA256 1201ab8d0e8d4b2d69d65ed2465fec64898dddf1
 EBUILD seabios-1.7.2.1.ebuild 2050 SHA256 ca60215d41c2220bea30f01564798b31a1b8c0290f7ccb3b6fc7d8dbd8dc4dd5 SHA512 f438901a089672835a7c46650bd3cf8b7b960bb1a3f690eb7e7bb90fa389ac1e736f55717dd0cdea657edb6812d11d45535e93ca2dbb0035aa8f58d010397295 WHIRLPOOL ccd184d2035b062a56ebffdab0921932ab775719c3817b09ac059a41038c3b503134608cdae4539ae524d3c4fd07bb0966a435d0084ab6691431e7849eb452dd
 EBUILD seabios-1.7.2.2.ebuild 2387 SHA256 b0c91105a4d41a403001887ad1c4427b6c4aca6ce61a0fec977083c3b12768f5 SHA512 1fb0d4c788100faeca4b447b8cb63b17f11a47ae64d4a7d07b0f78376adce412e1305ee0a01a95458627692202faa4947d78065701dfd08a405f3fc7261564fe WHIRLPOOL e9c8105636d9f5fc4a795f1e87f59cb6aa13257af2fd1bff0e652f3cf217bb4a2d7e132537e4762ad2ca4ecef0b2ef5dd6ca25e85275498e9d5e8bda5082d8c8
 EBUILD seabios-1.7.2.ebuild 1967 SHA256 f7c5af4a96b276e2cd1ff580aab0892e701ce32b43a3581f1ba946813433ae91 SHA512 2b8d5ab8a5a7a116d4d992116a6e932cdd6ee286118a23485b94f3b5fa26594d5e7b864c7c2b95e12dbde508a00e651c615c3e9efbac65111af8cec9da092d02 WHIRLPOOL 1fa38077f0a839a8d897fe5c51f2af9ef692ff4cdc2a031c499a390950b7de1c242bbe9af561f27dc398ca9f1f08f861d9f39cd3f7293c53ca49f6fca6922edc
-EBUILD seabios-1.7.3.ebuild 2673 SHA256 7fc30b25f7a430bbbc50fd5ff1dd72c1ce559c724da03486c80bc12ff2cd8867 SHA512 b4d56cb43a2b05ecc1b841035bf89704fc589fccc6ab5b8745dd670825827a87d5d99d68c25a2a994c2f839a73bff3a21f3ee977da403d21bc91509f67a47fa4 WHIRLPOOL bcf3c4469c6a93ee384a79a0250017b85a032e492dde9de48b9f245ff4cd517da384625da6dd8cf1f0a9c92169b13b47132f3486ee8e737622b53621f68f85c0
-MISC ChangeLog 5606 SHA256 4d91c145747e93be6b066527f2cf6ada7e5b4d680072480640c589addcb42639 SHA512 eb97c94e992857d88410c1417a39ae5cf024dbaa53940a12441bf0f743a3dd6440aa7634b024d28f99fa3f6b963824afeb2c600a0b4b0c9628aa90e9675bf422 WHIRLPOOL 2441cd386f6c8d2956fb3696cab6bede29025ebaec67ddfdae42fc7faf1cba519ef7d2c9841730ba35bc5e671f7662dd9209b2805c61470247e0ab0efa2e7c2a
+EBUILD seabios-1.7.3.ebuild 2719 SHA256 899aee051619779080804820a46dd3a12f85bc7764f002e5712c41ada4a78c6b SHA512 f96c575567ebc8b5cc3bfbf219eb89142b714b16522e0e63e2021a6b259c68906109436cf1c23105fcfd83299ffd242f8a18c1143ed6b544ed0b0c72b824e2eb WHIRLPOOL f1af39a0fb963a8dbb1fb91b5dbe94a3317b3a28750205410a198c3bfde3bf1ff1615632fd01eace37270abc9e7e1bcbb6e48d90a7f1c93453d0302d4514a02f
+MISC ChangeLog 5735 SHA256 2641f03190643e221c62c7d4fc357b85256f53b44fa409c0d0b0e68c5c8404ce SHA512 9beb9cccc7c7cd44b5daaaf64a5616947c03a2619bcb0ce63327223a3252fcc5076231b38d68bc38e48580512f5bd93cc856e9ed98fc2fc403dad42978ca4089 WHIRLPOOL 4f619466bb3249a3433bada09a92ee2f2e3ec51f6735a47d9b04e4a5190efadb71559d91eb06b45cd8b69951e9460cbd8bd87ab836f6eaa97d39e227a7bf6547
 MISC metadata.xml 348 SHA256 d3c5d1a4872e9f9c7006e20ea9abdd6b4f661041eb00111b09f4d7054b9a875c SHA512 a8424c71b656df412b38b171638815f32476496cd08faccb5504f9371960442af6fa0ed531609e43ca527f7a2df1ff2821938a060c35d43cfa2612e7c6ed3998 WHIRLPOOL ee7ccf452f7de334cfb398a4e735f139a7e24363b82409838062662755b565ca7f43e9bdc5c31c839352d8a4d64dd419722b7e413b243ad470199a4aeca12544
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSNDSvAAoJELp701BxlEWfALMP/R/puqpW2t1KQLmCdETfEL37
-6JOdJ0R1XLVyMLUl08QiHyan8ODcPia/b6gJg9v5Xokq89I8tBL50jdxTaO+Rkgj
-Z1xTYcw6phUt4FMxJeJaoOiBXAkOzwi92dixNL9uAjURIkFCbRXDQSP1cmHGzmFF
-eVWrBBJ7jNQlM0PD6jdiycg2ulGrlwLyIuqLjKXZ8YcY7IycP6m1NQ065Aekm+/n
-mv3nFIinfxpCyu0nThPWWicNcRUNVIgEctmyb5jXMPUa498bCQKKTJSwS6IVPhWw
-hqI+to6DGoTEGH5Mjb/AIKoFgsLBTZAa2jzP05jJeM2c/pfqd2pxSy0k4WxHpVfU
-0zubuL848VAPvJbBDTb9prme5Lz7dpcoPNtSdMm3YgUY6XZN4jNWmE31sFDo0EkQ
-Tfbi8l+2ef4EYevkjr1UZ6S69YVEWFb+qGddUy6eIQwpkN4CBa/IDtx3ElBmU14p
-24BX2qCulwSTzHIIYEk7uZ9MRrjAxwEiMZWr5ELYmR/NK8itT7SjGnPg44ImRrEH
-iFmbMk+tgDrT11W/pyA5ktPrKQ9wOGKcAIv/V0STTUjze7rITXruVLajtct0ysBK
-bFFqXphLEowiHzB2A20wa4KCn9j2YWW6IXyCk87TZ/CBrU+POcvNPb7zvG+ql4w5
-2n6d4YZ2EP7ynDtJKz0y
-=+D9Y
+iF4EAREIAAYFAlLC4yMACgkQC77qH+pIQ6QB2gD/RJcijeGt0MugYufsz++NyFMu
+pyYwg8eZKjs04oFiGzQA/39yzolZkw5bCCS6gv6gVbKdTIjfpMQYgUhNpypIb77w
+=wL6y
 -----END PGP SIGNATURE-----
